redesigned staff profile page

--- a/staffapp/templates/snippets/mobile-menu.html
+++ b/staffapp/templates/snippets/mobile-menu.html
@@ -2,7 +2,7 @@
 {% load active_link_tags %}
 
 <div
-	class="hidden md:hidden"
+	class="hidden md:hidden mt-4 bg-white"
 	id="mobile-menu"
 >
 	<div class="space-y-1 px-2 pb-2 pt-2">
