--- a/templates/base.html
+++ b/templates/base.html
@@ -10,26 +10,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-		<!-- jQuery Datepicker -->		
-		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-		<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>	
-		
-		<!-- <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js" /> -->
+		<!-- css style sheet -->
+		<link rel="stylesheet" href="{% static 'css/dist/style.css' %}">
 
-		<!-- Date Picker JS -->
-		<script>
-			$( function() {
-			  $( "#datepicker" ).datepicker({
-				changeMonth: true,
-				changeYear: true,
-				showButtonPanel: true
-			  });
-			} );
-		</script>
+		{% tailwind_css %}
 
 		<style>
 			@media only screen and (min-width: 768px) {
@@ -37,19 +22,14 @@
 					display: none !important;
 				}
 			}
-
-			.active-text-white {
-				color: #FFFFF !important;
-			}
 		</style>
-		
-		{% tailwind_css %}
+
 	</head>
 
 	<!-- Body -->
 	<body
 		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen bg-gray-900 font-sans
-				p-4 mx-auto"
+				p-2 md:p-4 mx-auto"
 	>
 
 		<!-- Nav bar -->
@@ -99,6 +79,7 @@
 					</div>
 
 					<div class="flex flex-1 items-center justify-between">
+
 						<!-- Navbar logo -->
 						<div class="flex flex-shrink-0 items-center">
 							<img class="h-14 w-auto" src="{% static 'img/edsg-mbtc-logo.svg' %}" alt="Your Company">
@@ -154,7 +135,8 @@
 								<!-- All Staff -->
 								<a
 								    href="{% url 'stafflist' %}"
-								    class="flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								    class="{% active_link 'stafflist' strict=True css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
+								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -177,7 +159,8 @@
 								<a
 								    href="{% url 'birthday' %}"
 								    target="_blank"
-								    class="flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
+								    class="{% active_link 'birthday' strict=True css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
+								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
 								>
@@ -200,10 +183,10 @@
 
 				</div>
 			</div>
-
-	        <!-- Mobile menu, show/hide based on menu state. -->
-			{% include 'snippets/mobile-menu.html' %}
 		</nav>
+
+        <!-- Mobile menu, show/hide based on menu state. -->
+		{% include 'snippets/mobile-menu.html' %}
 
 		{% block content %}		
 
