--- a/staffapp/templates/snippets/searchbar.html
+++ b/staffapp/templates/snippets/searchbar.html
@@ -7,11 +7,13 @@
         <div class="relative w-full">
 
             <!-- Input -->
-            <input type="text" id="tags" name="q" 
-                    class="bg-white block font-medium border border-none text-white text-xl rounded-none w-full
-                            focus:bg-green-800 block p-4 focus:ring-0 focus:outline-none focus:ring-green-800
-                            placeholder:text-gray-600 placeholder:text-xl placeholder:font-bold
-                            focus:placeholder:text-white"
+            <input type="text"
+                   id="tags"
+                   name="q"
+                   class="bg-white block font-medium border border-none text-white text-xl rounded-none w-full
+                          focus:bg-green-800 block p-4 focus:ring-0 focus:outline-none focus:ring-green-800
+                          placeholder:text-gray-600 placeholder:text-xl placeholder:font-bold
+                          focus:placeholder:text-white"
                     placeholder="Search..."
                    required
             >
@@ -20,62 +22,37 @@
             <button
                 type="reset"
                 class="absolute top-3.5 right-2 text-white bg-transparent hover:text-green-600
-                        text-sm p-1.5 ml-auto inline-block items-center align-middle">
-                <svg class="w-5 h-5 text-bold" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                       text-sm p-1.5 ml-auto inline-block items-center align-middle">
+                <svg
+                    class="w-5 h-5 text-bold"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
                     <path fill-rule="evenodd"
                         d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                         clip-rule="evenodd"></path>
                 </svg>
             </button>           
         </div>
-        
 
         <!-- Submit Query -->
         <button
             type="submit"
-            class="px-8 py-4 ml-2 text-md font-medium text-white bg-green-900 rounded-none border
+            class="px-8 py-4 ml-2 text-md font-medium text-white bg-green-900 rounded-none border ring-1 ring-green-900
                     border-2 border-green-900 hover:border-green-800 hover:bg-green-800 focus:ring-0
                     focus:outline-none focus:ring-green-800"
         >
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
+            <svg
+                class="w-6 h-6"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+            >
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
             </svg>
         </button>
     </form>
-    
-    <!-- Search autocomplete -->
-    <!-- <script src="https://unpkg.com/@trevoreyre/autocomplete-js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-
-    <!-- <script>
-        var name; // global variable that keeps the name
-        new Autocomplete('#autocomplete', {
-            search: input => {
-                const url = `/search/?name=${input}`;
-                return new Promise(resolve => {
-                    fetch(url).then(response => response.json()).then(data => {
-                        resolve(data.name);
-                    })
-                })
-            },
-
-            onSubmit: result => {
-                name = result; //pass clicked result to global
-            }
-        })
-        $('#ull').click(function (e) {
-            $.ajax({
-                url: '',
-                type: 'GET',
-                data: {
-                    valname: name,
-                },
-                success: function (response) {
-                    window.location = response.urlLink;
-                }
-            })
-        })
-    </script> -->
 </div>
