--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
 		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen bg-gray-900 font-sans
 				p-2 md:p-4 mx-auto"
 	>
+	    <!-- Error/Success messages   -->
+	    {% include 'snippets/messages.html' %}
 
 		<!-- Nav bar -->
 		<nav class="bg-white shadow-md">
