--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -55,7 +55,7 @@
 
                         <!-- HEADER - BIO DETAILS -->
                         <h2 class="mt-10 text-xl font-bold py-2 px-4 bg-green-900 text-white">
-                            1. Bio Details
+                            1. Personal Details
                         </h2>
 
                         <!-- Bio Details -->
@@ -342,7 +342,7 @@
                 </fieldset>
     
                 <!-- Submit Button -->
-                <div class="flex items-center mx-auto w-full md:max-w-2xl space-x-4 justify-center mt-14">
+                <div class="flex items-center mx-auto w-full md:max-w-xl space-x-4 justify-center mt-14">
                     <!-- Submit -->
                     <button
                         type="submit"
