--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -40,190 +40,12 @@
                 </p>
             </div>
 
-            <!-- Fields -->
-<!--            <fieldset class="mt-2">-->
+            <!-- DETAILS -->
+            <div class="mt-10 text-xl font-bold underline text-center py-2 px-4 bg-none text-green-900">
+                Personal and Official Details
+            </div>
 
-                <!-- DETAILS -->
-                <div class="mt-10 text-xl font-bold underline text-center py-2 px-4 bg-none text-green-900">
-                    Personal and Official Details
-                </div>
-
-<!--                &lt;!&ndash; Details &ndash;&gt;-->
-<!--                <dl-->
-<!--                    class="mt-8 p-4 pb-6 mx-auto justify-items-stretch md:px-6 md:pb-8 bg-stone-50 grid grid-cols-1-->
-<!--                           border border-1 border-gray-300 shadow-sm w-full divide-y divide-gray-200"-->
-<!--                >-->
-<!--                    &lt;!&ndash; Phone Number &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <dt class="">-->
-<!--                            <label for="phone_number" class="block text-lg font-semibold text-gray-500">-->
-<!--                                {{ tag.phone_number.label }}-->
-<!--                            </label>-->
-<!--                        </dt>-->
-
-<!--                        &lt;!&ndash; Phone Number &ndash;&gt;-->
-<!--                        <dd-->
-<!--                            id="phone_number"-->
-<!--                            class="text-xl md:text-xl font-semibold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.phone_number.as_national }}-->
-<!--                        </dd>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Gender &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-x-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4 md:py-6-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <dt class="">-->
-<!--                            <label for="gender" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.gender.label }}-->
-<!--                            </label>-->
-<!--                        </dt>-->
-
-<!--                        &lt;!&ndash; Gender &ndash;&gt;-->
-<!--                        <dd-->
-<!--                            id="gender"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.gender }}-->
-<!--                        </dd>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Date of Birth &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div class="">-->
-<!--                            <label for="date_of_birth" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.date_of_birth.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Date of Birth &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="date_of_birth"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.date_of_birth }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; First Appointment &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div class="">-->
-<!--                            <label for="first_appointment" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.first_appointment.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; First Appointment &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="first_appointment"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.first_appointment }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Cadre &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div>-->
-<!--                            <label for="cadre" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.cadre.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Cadre &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="cadre"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.cadre }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Department &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div>-->
-<!--                            <label for="department" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.department.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Department &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="department"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.department }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Grade Level &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div>-->
-<!--                            <label for="grade_level" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.grade_level.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Grade Level &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="grade_level"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.grade_level }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Step &ndash;&gt;-->
-<!--                    <div-->
-<!--                        class="grid gap-y-2 md:gap-6 grid-cols-1 md:grid-cols-2 px-2 md:px-4 mt-4-->
-<!--                               justify-items-stretch"-->
-<!--                    >-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <div>-->
-<!--                            <label for="step" class="block text-lg font-bold text-gray-500">-->
-<!--                                {{ tag.step.label }}-->
-<!--                            </label>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Step &ndash;&gt;-->
-<!--                        <div-->
-<!--                            id="step"-->
-<!--                            class="text-xl md:text-2xl font-bold block w-full text-gray-800"-->
-<!--                        >-->
-<!--                            {{ staff.step }}-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </dl>-->
-<!--            </fieldset>-->
-
-
+            <!-- DETAILS -->
             <div>
                 <div class="mt-4 border-t border-gray-100 px-4">
                     <dl class="divide-y grid divide-gray-200 md:text-center">
@@ -314,34 +136,47 @@
             <!-- Submit Button -->
             <div class="flex items-center mx-auto w-full md:max-w-xl space-x-4 justify-center mt-14">
 
-                <!-- Submit -->
-                <a href="{% url 'updatestaff' staff.id %}" class="w-full">
+                <!-- Edit -->
+                <a href="{{ staff.get_absolute_url_update_staff }}" class="w-full">
                     <button
                         type="submit"
                         class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
-                                border border-transparent text-lg font-medium rounded-none text-white bg-green-900
-                                hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
-                                focus:ring-green-800"
+                               border border-transparent text-lg font-medium rounded-none text-white bg-green-900
+                               hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-offset-2
+                               focus:ring-green-800"
                     >
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                                fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-white">
-                                <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" />
+                        <span class="inline-flex items-center">
+                            <svg
+                                class="mr-2 h-5 w-5 text-white"
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 20 20"
+                                fill="currentColor"
+                                aria-hidden="true">
+                                <path
+                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
                             Edit
+                        </span>
                     </button>
                 </a>
 
-                <!-- Clear form -->
+                <!-- Delete -->
                 <button
                     type="reset"
                     class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
                            border border-red-700 text-lg font-medium rounded-none text-white bg-red-700
-                          hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
-                          focus:ring-red-500 hover:border-red-600"
+                           hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
+                           focus:ring-red-500 hover:border-red-600"
                 >
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                        fill="currentColor" class="-ml-1 mr-2 h-5 w-5 text-white">
-                        <path fill-rule="evenodd" d="M4.755 10.059a7.5 7.5 0 0112.548-3.364l1.903 1.903h-3.183a.75.75 0 100 1.5h4.992a.75.75 0 00.75-.75V4.356a.75.75 0 00-1.5 0v3.18l-1.9-1.9A9 9 0 003.306 9.67a.75.75 0 101.45.388zm15.408 3.352a.75.75 0 00-.919.53 7.5 7.5 0 01-12.548 3.364l-1.902-1.903h3.183a.75.75 0 000-1.5H2.984a.75.75 0 00-.75.75v4.992a.75.75 0 001.5 0v-3.18l1.9 1.9a9 9 0 0015.059-4.035.75.75 0 00-.53-.918z" clip-rule="evenodd" />
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="mr-2 h-5 w-5 text-white inline-flex"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                     </svg>
                     Delete
                 </button>
