--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -7,16 +7,20 @@
 {% endblock %}
 
 {% block content %}
+
     <!-- Search bar -->
     {% include 'snippets/searchbar.html' %}
     
-    
     <!-- Staff list -->
-    <div class="p-8 md:pb-4 mt-8 max-w-3xl -mb-6 bg-white rounded-lg border mx-auto shadow-md sm:p-8 min-h-full justify-center">
-        
-        {% comment %} STAFF LIST HEADING {% endcomment %}
-        <div class="flex justify-between items-center mb-4">
-            <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>    
+    <div
+        class="p-8 md:pb-4 mt-8 max-w-3xl mb-6 bg-white rounded-none border
+               mx-auto shadow-md sm:p-8 min-h-full justify-center"
+    >
+
+        <div class="mx-auto text-center mb-8">
+            <h5 class="text-3xl font-bold leading-none text-gray-900 underline">
+                Staff List
+            </h5>
         </div>
         
         <!-- Staff list -->
@@ -30,13 +34,10 @@
 
                             <!-- Profile Picture -->
                             <div class="flex-shrink-0">
-                                <img class="w-14 h-14 rounded-full" 
-                                    {% if staff.staff_image %}
-                                        src="{{ staff.staff_image.url }}"
-                                        {% else %}
-                                            src="{% static 'img/default.png' %}"
-                                    {% endif %}
-                                        alt="{{ staff.first_name }}'s' image">
+                                <img
+                                    class="w-14 h-14 rounded-full"
+                                    src="{{ staff.staff_image.url }}"
+                                    alt="{{ staff.first_name }}'s' image">
                             </div>
         
                             <!-- Name and Email -->
@@ -51,18 +52,26 @@
                                     {{ staff.last_name }}
                                 </p>
                                 <p class="text-lg text-gray-500 truncate dark:text-gray-400">
-                                    {{ staff.email }}
+                                    {{ staff.official_email }}
                                 </p>
                             </div>
                             <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
         
                                 <!-- View Profile Button -->
-                                <a href="{% url 'staffdetails' staff.id %}">
-                                    <button type="button" class="inline-flex items-center px-4 py-2 border border-2 border-blue-300 rounded-md shadow-sm 
-                                                                text-sm font-medium text-white bg-blue-300 hover:bg-blue-400 focus:outline-none 
-                                                                hover:border-blue-400 focus:ring-4 focus:ring-offset-2 focus:ring-blue-400">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                                            stroke-width="2">
+                                <a href="{{ staff.get_absolute_url }}" target="_blank">
+                                    <button
+                                        type="button"
+                                        class="inline-flex items-center p-4 border border-2 border-green-800 rounded-none
+                                               text-sm font-medium text-white bg-green-800 hover:bg-green-700 focus:outline-none
+                                               hover:border-green-700 focus:ring-4 focus:ring-offset-2 focus:ring-green-700">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            class="mr-2 h-5 w-5"
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                        >
                                             <path stroke-linecap="round" stroke-linejoin="round"
                                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                                         </svg>
