--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -19,7 +19,7 @@
     <!-- Outer Container -->
     <div
         class="bg-white w-full md:max-w-5xl flex items-center shadow-md rounded-none mb-12 py-8 px-4
-               justify-center mx-auto mt-4 md:mt-8 md:p-8 lg:px-10"
+               justify-center mx-auto mt-4 md:mt-8 md:p-8"
     >
 
         <!-- Inner Container -->
@@ -45,7 +45,7 @@
                     {% endif %}
                     {{ staff.last_name }}
                 </h2>
-                <p class="mt-2 font-medium text-xl italic text-blue-500">
+                <p class="mt-2 font-bold text-xl italic text-blue-600">
                     {{ staff.official_email }}
                 </p>
             </div>
@@ -65,7 +65,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.phone_number.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.phone_number.as_national }}
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.gender.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.gender }}
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.date_of_birth.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.date_of_birth }}
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.first_appointment.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.first_appointment }}
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.cadre.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.cadre }}
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.department.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.department }}
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.grade_level.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.grade_level }}
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                             <label class="text-lg font-medium leading-6 text-gray-500">
                                 {{ tag.step.label }}
                             </label>
-                            <div class="mt-1 text-xl font-semibold leading-6 text-gray-800">
+                            <div class="mt-1 text-xl font-bold leading-6 text-gray-800">
                                 {{ staff.step }}
                             </div>
                         </div>
