--- a/staffapp/templates/snippets/messages.html
+++ b/staffapp/templates/snippets/messages.html
@@ -8,33 +8,52 @@
 				{% if message.tags == 'success' %}
 					<div
 						id="toast-success"
-						class="error-message flex justify-center items-center w-full p-4 rounded-sm drop-shadow-xl
-							   flex-row space-x-4 mx-auto text-gray-700 bg-white w-full"
+						class="error-message flex justify-between items-center w-full p-4 rounded-none drop-shadow-none
+							   flex-row space-x-4 mx-auto text-gray-700 bg-green-900 max-w-2xl mt-4"
 						 role="alert"
 					>
 
 						<!-- checkmark with green background -->
 						<div
-							class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 bg-green-700
+							class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 bg-white
 									text-white rounded-full"
 						>
-							<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+							<svg
+								aria-hidden="true"
+								class="w-5 h-5 text-green-700"
+								fill="currentColor"
+								viewBox="0 0 20 20"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
+							</svg>
 							<span class="sr-only">Check icon</span>
 						</div>
 
 						<!-- success message -->
-						<div class="text-lg text-center font-medium justify-self-center mx-auto">
+						<div class="text-lg text-center font-medium justify-self-center mx-auto text-white">
 							{{ message }}
 						</div>
 
 						<!-- close (x) button -->
-						<button type="button"
-								class="close-error-message ml-auto -mx-1.5 -my-1.5 bg-white hover:bg-green-700 text-green-800
-										hover:text-white rounded-sm focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-green-800
-										inline-flex h-8 w-8"
-								data-dismiss-target="#toast-success" aria-label="Close">
+						<button
+							type="button"
+							class="close-error-message ml-auto -mx-1.5 -my-1.5 bg-white hover:bg-green-900
+									text-green-800 hover:text-white rounded-none focus:ring-2 focus:ring-green-300
+									p-1.5 hover:bg-green-800 inline-flex h-8 w-8"
+							data-dismiss-target="#toast-success"
+							aria-label="Close"
+						>
 							<span class="sr-only">Close</span>
-							<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+							<svg
+								aria-hidden="true"
+								class="w-5 h-5"
+								fill="currentColor"
+								viewBox="0 0 20 20"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+							</svg>
 						</button>
 					</div>
 				{% endif %}
@@ -43,8 +62,8 @@
 				{% if message.tags == 'error' %}
 					<div
 						id="toast-error"
-						class="error-message flex justify-center items-center w-full p-4 rounded-sm drop-shadow-xl
-							   flex-row space-x-4 mx-auto text-white bg-red-700 w-full"
+						class="error-message flex justify-center items-center w-full p-4 rounded-none drop-shadow-none
+							   flex-row space-x-4 mx-auto text-white bg-red-700 mt-2"
 						role="alert"
 					>
 
