--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -33,7 +33,13 @@
             <!-- Form Title -->
             <div class="mb-6 text-center text-3xl font-extrabold text-gray-900">
                 <span class="underline underline-offset-2">Update:</span>
-                    {{ staff.first_name }} {{ staff.last_name }}
+                    {{ staff.first_name }}
+                    {% if staff.middle_name %}
+                        {{ staff.middle_name }}
+                        {% else %}
+                            <span></span>
+                    {% endif %}
+                    {{ staff.last_name }}
             </div>
 
             <p class="text-md mt-10 font-medium text-red-600">
@@ -180,7 +186,7 @@
                             <!-- Profile Photo -->
                             <div class="break-all col-span-full">
                                 <label for="staff_image" class="block text-lg font-bold leading-6 text-gray-500">
-                                    {{ form.staff_image.label }}
+                                    Change Profile Picture
                                 </label>
                                 <div class="mt-2 flex justify-center rounded-sm border-dashed border-2 border-gray-300 px-6 py-10 md:py-7">
                                     <div class="text-center">
@@ -192,7 +198,13 @@
                                             <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
                                         </svg>
                                         <div id="staff_image" class="mt-4 flex text-md leading-6 text-gray-600 place-items-center">
-                                            <label for="staff_image" class="relative cursor-pointer items-center rounded-sm bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
+                                            <label
+                                                for="staff_image"
+                                                class="relative cursor-pointer items-center rounded-sm bg-white
+                                                       font-semibold text-indigo-600 focus-within:outline-none
+                                                       focus-within:ring-2 focus-within:ring-indigo-600
+                                                       focus-within:ring-offset-2 hover:text-indigo-500"
+                                            >
                                                 {% render_field form.staff_image class+='cursor-pointer' %}
                                             </label>
                                         </div>
