added ken, imode and scorpion

--- a/staffapp/templates/base.html
+++ b/staffapp/templates/base.html
@@ -28,8 +28,8 @@
 
 	<!-- Body -->
 	<body
-		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen bg-gray-900 font-sans
-				p-2 md:p-4 mx-auto"
+		class="bg-index bg-no-repeat bg-cover bg-center bg-fixed font-sans min-h-screen bg-gray-900
+				font-sans p-2 md:p-4 mx-auto"
 	>
 
 		<!-- Nav bar -->
