--- a/staffapp/templates/index.html
+++ b/staffapp/templates/index.html
@@ -41,7 +41,7 @@
 							id="simple-search"
 							name="q"
 							class="bg-white block font-medium border border-4 border-green-900 text-white
-									text-xl rounded-sm focus:border-green-800 block w-full p-6 lg:p-6 md:p-6
+									text-xl rounded-none focus:border-green-800 block w-full p-6 lg:p-6 md:p-6
 									ring-2 ring-green-900 focus:bg-green-800 focus:ring-2 focus:outline-none
 									focus:ring-green-800 placeholder:text-gray-600 placeholder:text-xl
 									placeholder:font-bold focus:placeholder:text-white"
@@ -63,7 +63,7 @@
 		
 					<!-- Submit Query -->
 					<button type="submit" 
-							class="px-8 p-6 md:py-6 ml-2 text-lg font-bold text-white bg-green-900 rounded-sm border
+							class="px-8 p-6 md:py-6 ml-2 text-lg font-bold text-white bg-green-900 rounded-none border
 									border-2 border-green-900 hover:border-green-800 hover:bg-green-800 focus:ring-0
 									focus:outline-none focus:ring-green-800 ">
 						<span class="inline-flex items-center">
