--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -23,7 +23,7 @@
     >
     
         <!-- Inner Container -->
-        <div class="w-full -mt-6 min-h-full px-8 lg:px-10 pt-8 pb-4">
+        <div class="w-full px-8 lg:px-10 pb-4">
 
             <!-- Profile Picture -->
             <div class="mb-4 flex flex-col items-center">
@@ -183,15 +183,23 @@
 
                             <!-- Profile Photo -->
                             <div class="break-all col-span-full">
-                                <label for="staff_image" class="block text-lg font-bold leading-6 text-gray-500">
+                                <label
+                                    for="staff_image"
+                                    class="block text-lg font-bold leading-6 text-gray-500"
+                                >
                                     Profile Picture
                                 </label>
                                 <div
-                                    class="mt-2 flex justify-center rounded-none border-dashed border-2 border-gray-300
-                                           px-6 py-10 md:py-7"
+                                    class="mt-2 flex justify-center rounded-none border-dashed border-2
+                                           border-gray-300 px-6 py-10 md:py-7"
                                 >
                                     <div class="text-center">
-                                        <svg class="mx-auto h-16 w-16 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                                        <svg
+                                            class="mx-auto h-16 w-16 text-gray-300"
+                                            viewBox="0 0 24 24"
+                                            fill="currentColor"
+                                            aria-hidden="true"
+                                        >
                                             <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
                                         </svg>
                                         <div
@@ -256,6 +264,9 @@
                             <div>
                                 <label for="cadre" class="block mb-2 text-md font-bold text-gray-500">
                                     {{ form.cadre.label }}
+                                    <span class="ml-1 text-1xl font-medium text-red-600">
+                                        <em>*</em>
+                                    </span>
                                 </label>
 
                                 <div id="cadre">
