--- a/staffapp/templates/snippets/delete-modal.html
+++ b/staffapp/templates/snippets/delete-modal.html
@@ -1,66 +1,91 @@
 
-<div id="delete-modal" tabindex="-1"
-            class="hidden overflow-x-hidden overflow-y-auto fixed top-0 left-0 right-0
-                    z-50 md:inset-0 h-screen md:h-full p-4 m-auto backdrop-blur-md">
-        
+<div
+    id="delete-modal"
+    tabindex="-1"
+    class="hidden overflow-x-hidden overflow-y-auto fixed top-0 left-0 right-0
+           z-50 md:inset-0 h-screen md:h-full p-4 m-auto backdrop-blur-sm"
+>
+
     <!-- Outer Modal Container -->
-    <div class="relative p-4 w-full max-w-md md:max-w-lg h-full md:h-auto md:mx-auto sm:mx-auto">
+    <div
+        class="relative p-6 w-full max-w-md md:max-w-lg h-full
+               md:h-auto mx-auto"
+    >
 
         <!-- Inner modal container -->
-        <div class="relative bg-gray-800 rounded-sm shadow">
+        <div class="relative bg-gray-800 rounded-none shadow-md">
 
             <!-- X button -->
-            <button id="closemodal-x" type="button" data-modal-toggle="popup-modal"
-                class="closemodal absolute top-3 right-2.5 text-white bg-transparent hover:bg-white hover:text-gray-900 
-                        rounded-sm text-sm p-1.5 ml-auto inline-flex items-center">
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
+            <button
+                id="closemodal-x"
+                type="button"
+                data-modal-toggle="popup-modal"
+                class="closemodal absolute top-0 right-0 text-white bg-transparent hover:bg-white
+                       hover:text-gray-900 rounded-none text-sm p-4 ml-auto inline-flex items-center"
+            >
+                <svg
+                    class="w-5 h-5"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                        fill-rule="evenodd"
                         d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                         clip-rule="evenodd"></path>
                 </svg>
             </button>
 
-            <!-- Exclamation, Warning text annd action buttons -->
-            <div class="p-6 text-center">
+            <!-- Exclamation, Warning text and action buttons -->
+            <div
+                class="p-6 pt-4 text-center"
+            >
 
                 <!-- Exclamation icon -->
-                <svg class="closemodal mx-auto mb-4 w-14 h-14 text-white dark:text-gray-200" fill="none" stroke="currentColor"
-                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <svg
+                    class="closemodal mx-auto mb-4 w-14 h-14 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                 </svg>
 
                 <!-- Warning text -->
                 <h3 class="mb-5 text-lg font-normal text-center text-white">
-                    Are you sure? This action cannot be reversed
+                    Are you sure you want to remove this Staff? This action cannot be reversed
                 </h3>
 
                 <!-- Remove and Cancel buttons -->
-                <div class="flex items-center space-x-3 justify-center mt-8">
+                <div class="flex items-center space-x-6 justify-center mt-8">
 
                     <!-- Yes, Remove -->
                     <button type="button">
-                        <form action="{% url 'deleteform' form.id %}" method="POST">
+                        <form action="{% url 'deletestaff' staff.id %}" method="POST">
                             {% csrf_token %}
-                            <input type="submit" 
-                                class="cursor-pointer text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none 
-                                        focus:ring-red-400 font-medium rounded-sm text-md items-center px-5 py-2.5 text-center" 
-                                value="Yes, Delete">
+                            <input type="submit"
+                                class="cursor-pointer text-red-500 bg-none hover:bg-red-600 ring-4 ring-red-500
+                                       focus:outline-none font-bold rounded-none text-lg hover:ring-red-600
+                                       px-5 py-1.5 text-center hover:text-white"
+                                value="Yes, Delete"
+                            >
                         </form>
                     </button>
-    
+
                     <!-- No, Cancel button -->
                     <button id="closemodal-no" type="button" data-modal-toggle="popup-modal"
-                        class="text-gray-500 text-md bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none 
-                                focus:ring-gray-300 rounded-sm border font-medium px-5 py-2 
-                                hover:text-gray-600 focus:z-10 ">
+                        class="text-gray-800 text-lg bg-white hover:bg-gray-100 ring-4 focus:outline-none
+                               ring-white rounded-none font-bold px-5 py-1.5 hover:ring-gray-100"
+                    >
                         No, Cancel
                     </button>
                 </div>
                 <!-- End of Remove and Cancel buttons -->
 
             </div>
-            <!-- End of Exclamation, Warning text annd action buttons -->
+            <!-- End of Exclamation, Warning text and action buttons -->
 
         </div>
         <!-- End of inner modal container -->
