--- a/staffapp/templates/snippets/messages.html
+++ b/staffapp/templates/snippets/messages.html
@@ -9,7 +9,7 @@
 					<div
 						id="toast-success"
 						class="error-message flex justify-between items-center w-full p-4 rounded-none drop-shadow-none
-							   flex-row space-x-4 mx-auto text-gray-700 bg-green-900 max-w-2xl mt-4"
+							   flex-row space-x-4 mx-auto text-gray-700 bg-green-700 max-w-2xl mt-4"
 						 role="alert"
 					>
 
@@ -62,8 +62,8 @@
 				{% if message.tags == 'error' %}
 					<div
 						id="toast-error"
-						class="error-message flex justify-center items-center w-full p-4 rounded-none drop-shadow-none
-							   flex-row space-x-4 mx-auto text-white bg-red-700 mt-2"
+						class="error-message flex justify-between items-center w-full p-4 rounded-none drop-shadow-none
+							   flex-row space-x-4 mx-auto text-white bg-red-700 mt-4 max-w-2xl"
 						role="alert"
 					>
 
@@ -86,7 +86,7 @@
 							<!-- close (x) button -->
 							<button type="button"
 									class="close-error-message ml-auto -mx-1.5 -my-1.5 bg-red-700 hover:bg-white text-white
-											hover:text-red-600 rounded-sm focus:ring-2 focus:ring-gray-300 p-1.5
+											hover:text-red-600 rounded-none focus:ring-2 focus:ring-gray-300 p-1.5
 											inline-flex h-8 w-8"
 									data-dismiss-target="#toast-success" aria-label="Close">
 								<span class="sr-only">Close</span>
