--- a/staffapp/templates/snippets/mobile-menu.html
+++ b/staffapp/templates/snippets/mobile-menu.html
@@ -2,7 +2,7 @@
 {% load active_link_tags %}
 
 <div
-	class="hidden md:hidden mt-4 bg-white"
+	class="hidden md:hidden mt-1 bg-white"
 	id="mobile-menu"
 >
 	<div class="space-y-1 px-2 pb-2 pt-2">
@@ -10,9 +10,9 @@
 		<!-- Home -->
 		<a
 		    href="{% url 'index' %}"
-		    class="{% active_link 'index' strict=True css_class='text-white bg-green-900 hover:bg-green-900 hover:text-white' %}
-		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-medium
-					hover:bg-green-800 hover:text-white"
+		    class="{% active_link 'index' strict=True css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-white' %}
+		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
+					hover:bg-green-900 hover:text-white"
 		    aria-current="page"
 		>
 			<!-- Home -->
@@ -33,9 +33,9 @@
 		<!-- Add a Staff -->
 		<a
 		    href="{% url 'addstaff' %}"
-		    class="{% active_link 'addstaff' css_class='bg-green-900 text-white hover:bg-green-900 hover:text-white' %}
-		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-medium
-		            hover:bg-green-800 hover:text-white"
+		    class="{% active_link 'addstaff' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-white' %}
+		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
+		            hover:bg-green-900 hover:text-white"
 		    aria-current="page"
 		>
 		    <!-- Plus icon -->
@@ -54,9 +54,9 @@
 		<!-- Staff list -->
 		<a
 		    href="{% url 'stafflist' %}"
-		    class="{% active_link 'stafflist' css_class='text-white bg-green-900 hover:bg-green-900 hover:text-white' %}
-		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-medium
-		            hover:bg-green-800 hover:text-white"
+		    class="{% active_link 'stafflist' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-white' %}
+		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
+		            hover:bg-green-900 hover:text-white"
 		    aria-current="page"
 		>
 		    <!-- Staff icon -->
@@ -77,9 +77,9 @@
 		<!-- Birthday -->
 		<a
 		    href="{% url 'birthday' %}"
-		    class="{% active_link 'birthday' css_class='text-white bg-green-900 hover:bg-green-900 hover:text-white' %}
-		            bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-medium
-		            hover:bg-green-800 hover:text-white"
+		    class="{% active_link 'birthday' css_class='text-stone-50 bg-green-900 hover:bg-green-900 hover:text-white' %}
+		           bg-none text-gray-800 block rounded-none px-3 py-2 text-base font-bold
+		           hover:bg-green-900 hover:text-white"
 		    aria-current="page"
 		>
 		    <!-- Birthday icon -->
