--- a/staffapp/templates/staffdeleted.html
+++ b/staffapp/templates/staffdeleted.html
@@ -15,14 +15,23 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Profile Card -->
-    <div class="max-w-3xl mx-auto px-8 mb-20 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
+    <div
+        class="max-w-3xl mx-auto px-8 mb-20 bg-white rounded-none border
+               border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700"
+    >
 
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
 
             <!-- Checkmark icon -->
-            <svg class="mx-auto mb-4 w-14 h-14 text-green-600 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                stroke-width="2">
+            <svg
+                class="mx-auto mb-4 w-14 h-14 text-green-600 dark:text-gray-200"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+            >
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
             
